--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Ultra 3Game</title>
 	<link rel="icon" type="image/x-icon" href="/icons8-game-48.png">
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=YR+Medicom&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 
 		body {
 			margin: 0;
