--- a/index.html
+++ b/index.html
@@ -22,23 +22,21 @@
 			position: absolute;
 			top: 0;
 			right: 0;
-			width: 300px;
-			height: 100px;
+			width: 200px;
+			height: 70px;
 			background-color: #000;
 			border-radius: 10px;
-			box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 			padding: 1px;
 			text-align: center;
+			margin-right: 20px;
+			margin-top: 20px;
 		}
 	</style>
 </head>
 
 <body>
 	<script type="module" src="levels/wl_meth.js"></script>
-	<div id="hud">
-		<p id="score">Punteggio</p>
-		<p id="lives">Vite</p>
-	</div>
 </body>
 
 </html>
