Structure Refactoring e Minor Fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Ultra 3Game</title>
-	<link rel="icon" type="image/x-icon" href="/icons8-game-48.png">
+	<link rel="icon" type="image/x-icon" href="/images/icons8-game-48.png">
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 
