--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-	<script type="module" src="levels/wl_meth.js"></script>
+	<script type="module" src="levels/wl_meth_03.js"></script>
 </body>
 
 </html>
